2004-07-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure.in, configure, Makefile.in: Reorder configure.in for
	better 64-bit build configuration, replacing EXTRA_CFLAGS with
	CFLAGS.  [Bug #874058]
	(install-doc, install-libraries): guard against null globs

2004-07-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/rules.vc:    Modified the nmake build system to support
	* win/makefile.vc: an specific installation directory not in the
	tcl install tree. eg: a site-lib directory. Some general fixups
	too, get the tests working again, update the version, and use the
	new PACKAGE_VERSION macro.

2004-07-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/all.tcl: Added a compatability function to permit running
	tests on tcl 8.2.

2003-12-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in:      added TEA_ADD_LIBS, TEA_ADD_INCLUDES and
	* configure:        TEA_ADD_CFLAGS to configurable parameters with
	* configure.in:     PKG_* equivs in the Makefile.  This allows the
	* tclconfig/tcl.m4: user to worry less about actual magic VAR names.
	Corrected Makefile.in to note that TEA_ADD_TCL_SOURCES requires
	exact file names.

2003-12-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: added stub lib support even though sample doesn't
	yet create a stub library.

	* configure, tclconfig/tcl.m4: updated OpenBSD support based on
	[Patch #775246] (cassoff)

2003-12-08  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/sample.c: 
	* generic/sample.h: updated for 64-bit correctness

2003-12-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure:
	* configure.in:
	* Makefile.in (VPATH): readd $(srcdir) to front of VPATH as the
	first part of VPATH can get chopped off.
	Change .c.$(OBJEXT) rule to .c.@OBJEXT@ to support more makes.
	* tclconfig/tcl.m4: add TEA_ADD_STUB_SOURCES to support libstub
	generation and TEA_ADD_TCL_SOURCES to replace RUNTIME_SOURCES as
	the way the user specifies library files.

2003-12-03  Jeff Hobbs  <jeffh@ActiveState.com>
