@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: tclsample.test,v 1.1 2002/03/06 05:35:31 hobbs Exp $
+# RCS: @(#) $Id: tclsample.test,v 1.2 2004/12/02 00:35:38 dkf Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -33,7 +33,7 @@ test sha-1.1 {incorrect command usage} {
 
 test sha-1.2 {incorrect usage of -log2base option} {
     list [catch {sha1 -log2base 0 -string foo} errMsg] $errMsg
-} {1 {invalid log2base: -log2base must be integer in range 1...6}}
+} {1 {parameter to -log2base "0" must be integer in range 1...6}}
 
 # cleanup
 ::tcltest::cleanupTests
